--- a/templates/test.html
+++ b/templates/test.html
@@ -37,7 +37,7 @@
 </section>
 <section id="standardblock" class="mb150">
     <div class="container">
-        <div class="standardblock d-flex flex-sm-column flex-lg-row">
+        <div class="standardblock d-flex flex-sm-column flex-lg-row flex-column">
             <div class="col-xl-3 standardblock__leftmenu ">
                 <div class="wrapper"><h1 class="f32">Направления</h1>
                 </div>
@@ -68,9 +68,9 @@
                     <a href="" class="allservices mt-xl-auto">Все услуги</a><img class="ml-xl-2" src="/img/Vector.svg" alt="">
                 </div>
             </div>
-            <div class=" col-lg-9 standardblock__rightmenu">
+            <div class=" col col-lg-9  col-xs-1 standardblock__rightmenu">
                 <div class="row mt-sm-3 mt-lg-0">
-                    <div class="standardblock__rightmenu_item  mb-4 mr-sm-4 ">
+                    <div class="standardblock__rightmenu_item  mb-4 mr-4 ">
                         <div class="standardblock_wrapper">
                             <span class="standardblock_wrapper_title font-weight-bold">Корпоративные сайты</span>
                             <p class="standardblock_wrapper_paragraph">Lorem ipsum dolor sit amet, consectetur
@@ -96,7 +96,7 @@
                             </object>
                         </div>
                     </div>
-                    <div class="standardblock__rightmenu_item mb-4 mb-lg-0 mr-sm-4 ">
+                    <div class="standardblock__rightmenu_item mb-4 mb-lg-0 mr-4 ">
                         <div class="standardblock_wrapper">
                             <span class="standardblock_wrapper_title font-weight-bold">Корпоративные сайты</span>
                             <p class="standardblock_wrapper_paragraph">Lorem ipsum dolor sit amet, consectetur
